--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,6 +9,7 @@ logoFile="swordsplus.png"
 credits="CheeseMan: Head Coder | Thanks to all the people who helped with textures!" 
 description='''
 This incredible mod adds a new fighting style to Minecraft by implementing several new swords and related weapons!
+Along with this, there's also a magic system that combines with the weapons and other accessories for powerups. 
 It is a relatively small mod but packs a lot of creativity which makes it an enjoyable experience.
 Mod will be showcased on YT by Tag34883 aka CheeseMan's YouTube! https://www.youtube.com/channel/UCizWiKTr7BHGuhR3TnkquNQ  
 '''
